--- a/web_client/src/app/layouts/auth-layout/pages/register/register.component.html
+++ b/web_client/src/app/layouts/auth-layout/pages/register/register.component.html
@@ -17,7 +17,7 @@
                         </span>
                         <span class=" alert-text">{{this.errorText}}</span>
                     </div>
-                    <alert  class="alert-dismissible">
+                    <!-- <alert  class="alert-dismissible">
                         <div class="alert alert-success alert-dismissible" role="alert">
                             <button aria-label="Close" (click)="closeSuccess()" class="close" type="button">
                                 <span aria-hidden="true">×</span>
@@ -28,13 +28,13 @@
                             </span>
                             <span class=" alert-text">{{msg}}</span>
                         </div>
-                    </alert>
-                    <div class="input-group input-group-alternative mb-3">
+                    </alert> -->
+                    <!-- <div class="input-group input-group-alternative mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                         </div>
                         <input class="form-control" name="id" placeholder="An address from your wallet" type="text" required ngModel>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="form-group">
                     <div class="input-group input-group-alternative mb-3">
