--- a/web_client/src/app/layouts/student-layout/pages/diploma/diploma.component.html
+++ b/web_client/src/app/layouts/student-layout/pages/diploma/diploma.component.html
@@ -1,17 +1,15 @@
 <div class="card" (click)="popDiploma()">
-  <!--         <div class="card-header card-header-icon" [ngClass]="{'card-header-success': diploma.verified,'card-header-warning':!diploma.verified}">
- -->
+      <div class="card-header card-header-icon" [ngClass]="{'card-header-success': diploma.validated,'card-header-warning':!diploma.validated}">
+
   <div class="card-header card-header-icon card-header-success">
     <div class="card-icon">
-      <!--               <i class="material-icons">{{diploma.verified ?'check_box':'hourglass_top'}}</i>
- -->
-      <i class="material-icons">check_box</i>
+      <i class="material-icons">{{diploma.validated ?'check_box':'hourglass_top'}}</i>
     </div>
 
-    <h4 class="card-title">{{ diploma.id || "N/A" }}</h4>
+    <h4 class="card-title">Diploma {{diploma.title ||  'Diploma Title'}}</h4>
   </div>
   <div class="card-body">
-    <p class="card-category">Establishement : INSAT</p>
+    <p class="card-category">Honors {{diploma.honors ||  'Diploma Honors'}}</p>
   </div>
 </div>
 
@@ -22,24 +20,25 @@
     <div class="col">
       <div class="diploma">
         <div class="diploma-header">
-          <h2>{{ diploma.title || "Diploma Title" }}</h2>
+          <h2>{{diploma.title ||  'Diploma Title'}}</h2>
         </div>
         <div class="diploma-body">
           <div class="diploma-content">
-            <h4>We hereby congratulate our student</h4>
-            <h2>Foulen Ben Falten</h2>
-            <h3>For the successful completion of this certification</h3>
+            <h4>We hereby congratulate our student specialized in {{diploma.speciality ||  'SPECIALITY'}}</h4>
+            <h2>{{student? student.firstName + ' '+student.lastName : 'Foulen Ben Falten' }}</h2>
+            <h4>{{diploma.description ||  'For the successful completion of this certification'}}  </h4>
           </div>
           <div class="diploma-image">
             <h3>INSAT</h3>
-            <img src="assets/img/insatlogo.png" />
+            <img src="assets/img/insatlogo.png">
           </div>
         </div>
         <div class="diploma-feet">
           <h4>Mr. Samir Hamza</h4>
-          <h4>HASH</h4>
+          <h4>{{diploma.id.toString().slice(0,8) || 'Diploma Id Value'}}</h4>
         </div>
       </div>
+
     </div>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
