--- a/web_client/src/app/components/go-dialog/go-dialog.component.html
+++ b/web_client/src/app/components/go-dialog/go-dialog.component.html
@@ -1,8 +1,8 @@
 <h4 mat-dialog-title>Are you sure ?</h4>
 <mat-dialog-content class="mat-typography">
-  <h3> Make sure that you are willing to continue with the </h3>
+  <h3> Do you want to confirm the operation?</h3>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button class="btn btn-secondary" mat-dialog-close cdkFocusInitial>Cancel</button>
-  <button mat-button class="btn btn-primary" [mat-dialog-close]="true" >Yes, Continue</button>
+  <button mat-button class="btn btn-primary" [mat-dialog-close]="true" >Yes, Confirm</button>
 </mat-dialog-actions>
