--- a/web_client/src/app/layouts/student-layout/pages/diploma/diploma.component.html
+++ b/web_client/src/app/layouts/student-layout/pages/diploma/diploma.component.html
@@ -53,7 +53,7 @@
       [mat-dialog-close]="true"
       cdkFocusInitial
     >
-      Share
+      Download Diploma File
     </button>
     </a>
       
