--- a/web_client/src/app/layouts/verifier-layout/pages/diploma-verif/diploma-verif.component.html
+++ b/web_client/src/app/layouts/verifier-layout/pages/diploma-verif/diploma-verif.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="card-body">
     <div>
-      <mat-form-field>
+     <!--  <mat-form-field>
         <mat-label>Digital Diploma URL</mat-label>
         <input
           matInput
@@ -25,7 +25,9 @@
           placeholder="http(s)://.*"
         />
       </mat-form-field>
-
+ -->
+      <h3> Drag and Drop </h3>
+      <h4>Or</h4>
       <button
         mat-raised-button
         (click)="$event.preventDefault(); fileUpload.click()"
