--- a/web_client/src/app/components/navbar/navbar.component.html
+++ b/web_client/src/app/components/navbar/navbar.component.html
@@ -31,14 +31,14 @@
                 </li>
 
                 
-                <li class="nav-item" *ngIf="this.web3service.isLogged()">
+                <!-- <li class="nav-item" *ngIf="this.web3service.isLogged()">
                     
                         <button class="btn btn-secondary" (click)="this.web3service.logout()">
                             <i class="material-icons ">lock</i>
                             Log Out
                         </button>
                     
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
